[gd_scene load_steps=14 format=2]

[ext_resource path="res://SFX/3.1. mouse-click1.ogg" type="AudioStream" id=1]
[ext_resource path="res://images/placeholder-cabania - copia.png" type="Texture" id=2]
[ext_resource path="res://BGM/mt4.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/Botones/jugar2.png" type="Texture" id=4]
[ext_resource path="res://assets/espaciadores/espacio2.png" type="Texture" id=5]
[ext_resource path="res://assets/espaciadores/espacio.png" type="Texture" id=6]
[ext_resource path="res://assets/iconos/atras.png" type="Texture" id=7]
[ext_resource path="res://fonts/Righteous-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/iconos/help.png" type="Texture" id=9]
[ext_resource path="res://scenes/animales.gd" type="Script" id=10]

[sub_resource type="DynamicFontData" id=1]

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 65
font_data = ExtResource( 8 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="Fondo" type="TextureRect" parent="."]
margin_right = 1030.0
margin_bottom = 600.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 61.0
margin_top = 50.0
margin_right = 101.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "AKJWBDKAW"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1030.0
margin_bottom = 602.0
alignment = 1

[node name="Filler2" type="TextureButton" parent="HBoxContainer"]
margin_left = 56.0
margin_right = 92.0
margin_bottom = 602.0
texture_normal = ExtResource( 5 )

[node name="TextureButton4" type="TextureButton" parent="HBoxContainer"]
margin_left = 96.0
margin_right = 174.0
margin_bottom = 91.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
texture_normal = ExtResource( 7 )

[node name="Filler" type="TextureButton" parent="HBoxContainer"]
margin_left = 178.0
margin_right = 248.0
margin_bottom = 602.0
texture_normal = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 252.0
margin_right = 870.0
margin_bottom = 602.0
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 202.0
margin_right = 618.0
margin_bottom = 284.0
custom_fonts/font = SubResource( 3 )
text = "  Juego de Cavado    "
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 288.0
margin_right = 618.0
margin_bottom = 400.0
alignment = 1

[node name="JUGAR" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 184.0
margin_right = 433.0
margin_bottom = 112.0
mouse_default_cursor_shape = 2
size_flags_vertical = 0
texture_normal = ExtResource( 4 )
stretch_mode = 5

[node name="TextureButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 874.0
margin_right = 974.0
margin_bottom = 100.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
texture_normal = ExtResource( 9 )
__meta__ = {
"_editor_description_": "Ayuda"
}

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -17.0

[connection signal="button_down" from="HBoxContainer/TextureButton4" to="." method="_on_TextureButton4_button_down"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/HBoxContainer/JUGAR" to="." method="_on_JUGAR_button_down"]
