[gd_scene load_steps=18 format=2]

[ext_resource path="res://images/bg.png" type="Texture" id=1]
[ext_resource path="res://assets/iconos/store.png" type="Texture" id=2]
[ext_resource path="res://assets/iconos/user.png" type="Texture" id=3]
[ext_resource path="res://assets/iconos/trash can-game.png" type="Texture" id=4]
[ext_resource path="res://assets/iconos/animal-game.png" type="Texture" id=5]
[ext_resource path="res://assets/iconos/arboles.png" type="Texture" id=6]
[ext_resource path="res://assets/iconos/tree-game.png" type="Texture" id=7]
[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=8]
[ext_resource path="res://scenes/animales.gd" type="Script" id=9]
[ext_resource path="res://assets/iconos/salir.png" type="Texture" id=10]
[ext_resource path="res://assets/PopUp.png" type="Texture" id=11]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/Righteous-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://fonts/Righteous-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://fonts/Righteous-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = SubResource( 8 )

[node name="Principal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.705882 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 924.0
margin_bottom = 500.0
custom_constants/separation = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 402.0
margin_bottom = 259.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 402.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 2 )
text = "Protector Del Bosque"

[node name="TextureButton" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 55.0
margin_right = 100.0
margin_bottom = 155.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
disabled = true
texture_normal = ExtResource( 2 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 100.0
margin_bottom = 155.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
texture_normal = ExtResource( 3 )

[node name="Enciclopedia" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 159.0
margin_right = 100.0
margin_bottom = 259.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
texture_normal = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 502.0
margin_right = 802.0
margin_bottom = 500.0
custom_constants/separation = 100

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/HBoxContainer"]
margin_top = 50.0
margin_right = 100.0
margin_bottom = 450.0
size_flags_vertical = 4
custom_constants/separation = 200
alignment = 1

[node name="reciclaje" type="TextureButton" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 100.0
margin_bottom = 100.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )

[node name="animales" type="TextureButton" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 300.0
margin_right = 100.0
margin_bottom = 400.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
script = ExtResource( 9 )

[node name="arbol" type="TextureButton" parent="MarginContainer/HBoxContainer/HBoxContainer"]
margin_left = 200.0
margin_top = 200.0
margin_right = 300.0
margin_bottom = 300.0
mouse_default_cursor_shape = 2
size_flags_vertical = 4
texture_normal = ExtResource( 7 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 946.0
margin_top = 9.0
margin_right = 1014.0
margin_bottom = 77.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 10 )

[node name="Popup" type="Popup" parent="."]
visible = true
margin_left = 344.0
margin_top = 198.0
margin_right = 671.0
margin_bottom = 421.0
popup_exclusive = true

[node name="TextureRect" type="TextureRect" parent="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0
texture = ExtResource( 11 )

[node name="VBoxContainer" type="VBoxContainer" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -34.0
margin_top = -12.0
margin_right = 32.0
margin_bottom = 2.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Popup/VBoxContainer"]
margin_top = 73.0
margin_right = 393.0
margin_bottom = 111.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Â¿Desea salir del juego?"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Popup/VBoxContainer"]
margin_top = 131.0
margin_right = 393.0
margin_bottom = 163.0
alignment = 1

[node name="Button" type="Button" parent="Popup/VBoxContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 217.0
margin_bottom = 32.0
focus_mode = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.0117647, 0.188235, 1, 1 )
custom_fonts/font = SubResource( 6 )
enabled_focus_mode = 1
text = "CANCELAR"
flat = true

[node name="Button2" type="Button" parent="Popup/VBoxContainer/HBoxContainer"]
margin_left = 221.0
margin_right = 289.0
margin_bottom = 32.0
focus_mode = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.235294, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
enabled_focus_mode = 1
text = "SALIR"
flat = true

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Enciclopedia" to="." method="_on_Enciclopedia_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2/reciclaje" to="." method="_on_reciclaje_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2/animales" to="." method="_on_animales_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer/arbol" to="." method="_on_arbol_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Popup/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Popup/VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
